[project]
name = "bp"
version = "0.1.0"
description = "Personalized blood-pressure alert ML pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "ipykernel>=7.2.0",
    "jinja2>=3.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
    "pydantic>=2.6",
    "pyreadstat>=1.3.3",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.11",
    "seaborn>=0.13.2",
    "uvicorn>=0.27",
    "xgboost>=2.0",
]
