[project]
name = "bp"
version = "0.2.0"
description = "Rule-based personalized blood-pressure alert engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
]
